SERVER-7502 test that partial projection of _id works correctly